[project]
name = "pnpq"
version = "0.1.0"
description = "PnPQ is a python library package for controlling optical devices in quantum networks"
authors = [
    { name = "Amin Taherkhani", email = "amin@sfc.wide.ad.jp" }
]
dependencies = [
    "pytest>=7.4.4",
    "pyserial>=3.5",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hello = "pnpq:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pnpq"]
