[project]
name = "pnpq"
dynamic = ["version"]
description = "PnPQ is a python library package for controlling optical devices in quantum networks"
authors = [
    { name = "Amin Taherkhani", email = "amin@sfc.wide.ad.jp" },
    { name = "Andrew Todd", email = "at@auspicacious.org" },
]
dependencies = [
    "pyserial>=3.5",
    "types-pyserial>=3.5.0.20240826",
    "pint>=0.24.3",
    "structlog>=24.4.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=24.8.0",
    "coverage>=7.6.1",
    "isort>=5.13.2",
    "mypy>=1.11.2",
    "pylint>=3.3.1",
    "pytest>=8.3.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pnpq"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
path = "src/pnpq/__init__.py"

[tool.isort]
profile = "black"

[tool.mypy]
files = ["."]
strict = true

[tool.pylint.format]
max-line-length = "88"

# See https://pylint.pycqa.org/en/latest/user_guide/messages/index.html
[tool.pylint."messages control"]
disable = ["raw-checker-failed", "bad-inline-option", "locally-disabled", "file-ignored", "suppressed-message", "deprecated-pragma", "use-symbolic-message-instead", "use-implicit-booleaness-not-comparison-to-string", "use-implicit-booleaness-not-comparison-to-zero", "missing-module-docstring", "missing-class-docstring", "missing-function-docstring", "line-too-long", "duplicate-code", "too-many-instance-attributes", "too-few-public-methods", "too-many-public-methods", "too-many-arguments", "too-many-locals", "too-many-positional-arguments", "fixme"]

[tool.pytest.ini_options]
testpaths = ["tests"]
